@@ -34,7 +34,7 @@
     <fileSet>
       <useDefaultExcludes>true</useDefaultExcludes>
       <outputDirectory></outputDirectory>
-      <directory>${project.basedir}</directory>
+      <directory>${project.basedir}/../</directory>
       <fileMode>0644</fileMode>
       <includes>
         <include>README.md</include>
